--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
+    "passkit-generator": "^3.1.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.20.6"
